--- a/machine/pom.xml
+++ b/machine/pom.xml
@@ -20,6 +20,10 @@
             <groupId>org.study</groupId>
             <artifactId>common</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.study</groupId>
+            <artifactId>machine-api</artifactId>
+        </dependency>
     </dependencies>
 
 
