--- a/merchant/pom.xml
+++ b/merchant/pom.xml
@@ -33,5 +33,13 @@
             <groupId>org.study</groupId>
             <artifactId>common</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.study</groupId>
+            <artifactId>machine-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+        </dependency>
     </dependencies>
 </project>
